<resources>
    <string name="app_name">Walklight</string>
    <string name="turn_on_flashlight">Turn On</string>
    <string name="turn_off_flashlight">Turn Off</string>
    <string name="intensity">Intensity</string>
    <string name="light_intensity">Light</string>
    <string name="light_toggle">Light</string>
    <string name="screen_brightness">Screen</string>
    <string name="sync_controls">Link to screen</string>
    <string name="permission_camera_rationale">Camera permission is needed to control the flashlight.</string>
    <string name="permission_denied">Camera permission is required for flashlight functionality.</string>
    <string name="about_title">Walklight - Safety light</string>
    <string name="about_version">Version %s</string>
    <string name="settings_title">Settings</string>
    <string name="settings_close">Close</string>
    <string name="settings_version_title">Walklight - Safety Light</string>
    <string name="settings_version_summary">Version: %s</string>
    <string name="settings_keep_light_title">Keep flashlight on</string>
    <string name="settings_keep_light_summary">Flashlight stays on when you close the app. (It will always turn off when you exit the app)</string>
    <string name="settings_companion_header_title">Companion App for split screen mode</string>
    <string name="settings_companion_title">Companion App</string>
    <string name="settings_companion_summary">App for split-screen mode</string>
    <string name="settings_companion_button">Pick App</string>
    <string name="settings_companion_launch">Launch</string>
    <string name="settings_companion_launch_title">Test companion app:</string>
    <string name="settings_companion_launch_summary">Launch the app you selected</string>
    <string name="settings_reset_button">Reset to Default</string>
</resources>
